zetasql/parser/testdata/script.test
# Script containing a single statement, with terminating semi-colon.
[default mode=script]
SELECT 3{{;|}}
--
ALTERNATION GROUP: ;
--
Script [0-10] [SELECT 3;]
  StatementList [0-10] [SELECT 3;]
    QueryStatement [0-8] [SELECT 3]
      Query [0-8] [SELECT 3]
        Select [0-8] [SELECT 3]
          SelectList [7-8] [3]
            SelectColumn [7-8] [3]
              IntLiteral(3) [7-8] [3]
--
SELECT
  3
;
--
ALTERNATION GROUP: <empty>
--
Script [0-8] [SELECT 3]
  StatementList [0-8] [SELECT 3]
    QueryStatement [0-8] [SELECT 3]
      Query [0-8] [SELECT 3]
        Select [0-8] [SELECT 3]
          SelectList [7-8] [3]
            SelectColumn [7-8] [3]
              IntLiteral(3) [7-8] [3]
--
SELECT
  3
;
==

# Empty script

--
Script [0-0] []
  StatementList [0-0] []
--
==

# Script with multiple statements, both with and without a terminating semicolon
# following the last statement.
SELECT 3; SELECT 4{{;|}}
--
ALTERNATION GROUP: ;
--
Script [0-20] [SELECT 3; SELECT 4;]
  StatementList [0-20] [SELECT 3; SELECT 4;]
    QueryStatement [0-8] [SELECT 3]
      Query [0-8] [SELECT 3]
        Select [0-8] [SELECT 3]
          SelectList [7-8] [3]
            SelectColumn [7-8] [3]
              IntLiteral(3) [7-8] [3]
    QueryStatement [10-18] [SELECT 4]
      Query [10-18] [SELECT 4]
        Select [10-18] [SELECT 4]
          SelectList [17-18] [4]
            SelectColumn [17-18] [4]
              IntLiteral(4) [17-18] [4]
--
SELECT
  3
;
SELECT
  4
;
--
ALTERNATION GROUP: <empty>
--
Script [0-18] [SELECT 3; SELECT 4]
  StatementList [0-18] [SELECT 3; SELECT 4]
    QueryStatement [0-8] [SELECT 3]
      Query [0-8] [SELECT 3]
        Select [0-8] [SELECT 3]
          SelectList [7-8] [3]
            SelectColumn [7-8] [3]
              IntLiteral(3) [7-8] [3]
    QueryStatement [10-18] [SELECT 4]
      Query [10-18] [SELECT 4]
        Select [10-18] [SELECT 4]
          SelectList [17-18] [4]
            SelectColumn [17-18] [4]
              IntLiteral(4) [17-18] [4]
--
SELECT
  3
;
SELECT
  4
;
==

# This is an error because omitting the semi-colon between statements is not
# allowed.
SELECT 7 SELECT 8
--
ERROR: Syntax error: Expected end of input but got keyword SELECT [at 1:10]
SELECT 7 SELECT 8
         ^
==

# Test compound statements appearing in a script.
IF true then
  select 9;
  select 10;
end if;
SELECT 11
--
Script [0-55] [IF true then...SELECT 11]
  StatementList [0-55] [IF true then...SELECT 11]
    IfStatement [0-44] [IF true then...10; end if]
      BooleanLiteral(true) [3-7] [true]
      StatementList [15-38] [select 9;   select 10;]
        QueryStatement [15-23] [select 9]
          Query [15-23] [select 9]
            Select [15-23] [select 9]
              SelectList [22-23] [9]
                SelectColumn [22-23] [9]
                  IntLiteral(9) [22-23] [9]
        QueryStatement [27-36] [select 10]
          Query [27-36] [select 10]
            Select [27-36] [select 10]
              SelectList [34-36] [10]
                SelectColumn [34-36] [10]
                  IntLiteral(10) [34-36] [10]
    QueryStatement [46-55] [SELECT 11]
      Query [46-55] [SELECT 11]
        Select [46-55] [SELECT 11]
          SelectList [53-55] [11]
            SelectColumn [53-55] [11]
              IntLiteral(11) [53-55] [11]
--
IF true THEN
  SELECT
    9
  ;
  SELECT
    10
  ;
END IF ;
SELECT
  11
;
==

# Error: standalone expressions not allowed
7
--
ERROR: Syntax error: Expected end of input but got integer literal "7" [at 1:1]
7
^
==

SELECT 1;
EXECUTE IMMEDIATE x;
--
Script [0-31] [SELECT 1; EXECUTE IMMEDIATE x;]
  StatementList [0-31] [SELECT 1; EXECUTE IMMEDIATE x;]
    QueryStatement [0-8] [SELECT 1]
      Query [0-8] [SELECT 1]
        Select [0-8] [SELECT 1]
          SelectList [7-8] [1]
            SelectColumn [7-8] [1]
              IntLiteral(1) [7-8] [1]
    ExecuteImmediateStatement [10-29] [EXECUTE IMMEDIATE x]
      PathExpression [28-29] [x]
        Identifier(x) [28-29] [x]
--
SELECT
  1
;
EXECUTE IMMEDIATE x ;
